Generating AiOutput
