# docs/swagger.json
@@ -340,7 +340,7 @@
         },
         "/initializ/v1/ai/upload": {
             "post": {
-                "description": "Upload Excel File",
+                "description": "Upload Excel File in Base 64 format",
                 "produces": [
                     "application/json"
                 ],
@@ -350,8 +350,8 @@
                 "summary": "Upload Excel File",
                 "parameters": [
                     {
-                        "description": "File Data in base64 encoded",
-                        "name": "UploadExcel",
+                        "description": "File metadata",
+                        "name": "metadata",
                         "in": "body",
                         "required": true,
                         "schema": {
