# routes/userdetails_routes.go
@@ -9,6 +9,7 @@ import (
 
 func UserDataRouter(router *gin.Engine) {
 	userDataRepo := config.GetRepoCollection("UserData")
-	router.POST("/initializ/v1/ai/upload", controllers.UploadExcel(userDataRepo))
+	promptRepo := config.GetRepoCollection("AIPrompts")
+	router.POST("/initializ/v1/ai/upload", controllers.UploadExcel(userDataRepo, promptRepo))
 	router.GET("/initializ/v1/ai/allusers", controllers.GetAllUserData(userDataRepo))
 }
